# ChangeLog for dev-perl/IO-Socket-SSL
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.149 2011/05/03 06:48:24 grobian Exp $

  03 May 2011; Fabian Groffen <grobian@gentoo.org>
  IO-Socket-SSL-1.400.0.ebuild:
  Marked ~x64-freebsd

*IO-Socket-SSL-1.400.0 (02 May 2011)

  02 May 2011; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.400.0.ebuild:
  Version bump

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-1.370.ebuild,
  -IO-Socket-SSL-1.380.ebuild:
  Cleanup

*IO-Socket-SSL-1.390.0 (04 Mar 2011)

  04 Mar 2011; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.390.0.ebuild:
  Version bump

*IO-Socket-SSL-1.380 (18 Jan 2011)

  18 Jan 2011; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.380.ebuild:
  Version bump

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -IO-Socket-SSL-1.26.ebuild,
  -IO-Socket-SSL-1.31.ebuild, -IO-Socket-SSL-1.32.ebuild,
  -IO-Socket-SSL-1.33.ebuild, -IO-Socket-SSL-1.34.ebuild:
  Cleanup

*IO-Socket-SSL-1.370 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.370.ebuild:
  Version bump

  12 Dec 2010; Raúl Porcel <armin76@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #348003

  10 Dec 2010; Markos Chandras <hwoarang@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  Stable on amd64 wrt bug #348003

  10 Dec 2010; Brent Baude <ranger@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  Marking IO-Socket-SSL-1.35 ppc64 for bug 348003

  08 Dec 2010; Markus Meier <maekke@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  arm stable, bug #348003

  07 Dec 2010; Jeroen Roovers <jer@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  Stable for PPC (bug #348003).

  07 Dec 2010; Jeroen Roovers <jer@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  Stable for HPPA (bug #348003).

  07 Dec 2010; Thomas Kahle <tomka@gentoo.org> IO-Socket-SSL-1.35.ebuild:
  x86 stable per bug 348003

*IO-Socket-SSL-1.35 (07 Dec 2010)
