@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/IO-Socket-SSL
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.149 2011/05/03 06:48:24 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.150 2011/05/11 18:27:15 tove Exp $
+
+*IO-Socket-SSL-1.430.0 (11 May 2011)
+
+  11 May 2011; Torsten Veller <tove@gentoo.org> +IO-Socket-SSL-1.430.0.ebuild:
+  Version bump
 
   03 May 2011; Fabian Groffen <grobian@gentoo.org>
   IO-Socket-SSL-1.400.0.ebuild:
